Fixed bug in notification bar where notification bar hangs when notification with the same messages overlap due to the useEffect callback that sets the 5 second notification timeout not executing due to the messages being the same

--- a/f/src/c/notificationBar.css
+++ b/f/src/c/notificationBar.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     opacity: 1;
-    z-index: 2;
+    z-index: 4;
 }
 
 #notification-overlay .notification-message{
